# odd

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml
odd/: __init__.py  is_odd.py
tests/: test_is_odd.py
